# dev-container-mcp

./: .gitignore  README.md  mcp-client.py  mcp-server.py  mcp_client.py  mcp_client_resource.py  mcp_server_resource.py  pyproject.toml  ruff.toml
src/: bmi_mcp_server.py  math_mcp_server.py  mcp_client.py  mcp_client_resource.py  mcp_client_resource_new.py  mcp_server.py  mcp_server_resource.py
